--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
     "handlebars": "^4.0.10",
     "method-override": "^2.3.9",
     "mysql": "^2.14.1"
+  },
+  "dependencies": {
+    "node-datetime": "^2.0.0",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.10",
+    "method-override": "^2.3.9",
+    "mysql": "^2.14.1"
   }
 }
